--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="blackbar"></div>
         <div class="cvvtext">
           <p>Authorized Signature - not valid unless signed</p>
-          <div class="bar"><div class="whiteBar"></div>
+          <div class="bar"><div class="WhiteBar"></div>
           <div class="cvv">123</div></div>
         </div>
         <p class="text">
