--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   </head>
   <section>
     <div class="card">
@@ -9,32 +15,3 @@
           <h3 class="debit">Debit Card</h3>
           <h3 class="bank">Bank Name</h3>
         </div>
-        <img
-          src="chip.jpg"
-          class="chip"
-          alt="Chip_image"
-        />
-        <h3 class="number">0123 4567 8910 1112</h3>
-        <p class="valid"><span>valid upto</span><span>09/24</span></p>
-        <p class="cardHolder">CUSTOMER NAME</p>
-      </div>
-      <div class="view back">
-        <div class="blackbar"></div>
-        <div class="cvvtext">
-          <p>Authorized Signature - not valid unless signed</p>
-          <div class="bar"><div class="WhiteBar"></div>
-          <div class="cvv">123</div></div>
-        </div>
-        <p class="text">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente
-          dolore iste officia natus, voluptatibus deserunt, est numquam
-         
-          voluptatibus, porro molestiae iure nemo est suscipit quaerat quis?
-          Incidunt optio architecto distinctio ex quae odio! Ea, libero. Lorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Sapiente dolore
-          iste officia natus, voluptatibus deserunt.
-        </p>
-      </div>
-    </div>
-  </section>
-</html>
